Use modern Locale factories
(cherry picked from commit 796324ff98fe8df0d20360407a3bc415e9e83e5b)